--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>
         Imersão Dev - Aula 05
     </title>
+    <link href"http://zacknichiki.github.io/MegaFilm/style.css" rel="stylesheet"/>
+    <script src="http://zacknichiki.github.io/MegaFilm/script.js"></script>
 </head>
 
 <body> 
