--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>
         Imersão Dev - Aula 05
     </title>
-    <link href"http://zacknichiki.github.io/MegaFilm/style.css" rel="stylesheet"/>
-    <script src="http://zacknichiki.github.io/MegaFilm/script.js"></script>
+    <link href"https://zacknichiki.github.io/Megafilm/style.css" rel="stylesheet"/>
+    <script src="https://zacknichiki.github.io/Megafilm/script.js"></script>
 </head>
 
 <body> 
