--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>
         Imersão Dev - Aula 05
     </title>
-    <link href"https://zacknichiki.github.io/Megafilm/style.css" rel="stylesheet"/>
+    <link href="https://zacknichiki.github.io/Megafilm/style.css" rel="stylesheet" />
     <script src="https://zacknichiki.github.io/Megafilm/script.js"></script>
 </head>
 
