--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>
         Imersão Dev - Aula 05
     </title>
-    <link href="https://zacknichiki.github.io/Megafilm/style.css" rel="stylesheet" /> 
-
+    <link rel="stylesheet" href="style.css" /> 
 </head>
 
 <body> 
