--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html> 
 <html>
-
+    <html lang="pt-BR">
 <head>
     <title>
         Imersão Dev - Aula 05
     </title>
-    <link rel="stylesheet" href="style.css" /> 
+    <link rel="stylesheet" href="Megafilm/style.css" /> 
 </head>
 
 <body> 
